@@ -1,7 +1,12 @@
 ispCP ω 1.0.3 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-2009-11-16 Laurent Declercq
+2009-11-17 Benedikt Heintel
+	- GUI:
+		* Corrected spelling mistake
+		* Fixed #2047: domain_dns table, should have an unique index
+
+2009-11-17 Laurent Declercq
 	- SETUP:
 		* Deleting of several sql files that are not longer needed
 
